if --maxconns is lower than system can handle, lower limit SERVER-2056